# cpp-ipc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml  performance.xlsx  performence.xlsx  xmake.lua
.github/workflows/: c-cpp.yml  codecov.yml
benchmark/: CMakeLists.txt  benchmark_concur.cpp  benchmark_fmt.cpp  benchmark_ipc.cpp  benchmark_log.cpp  benchmark_new.cpp  xmake.lua
demo/PyCpp/: CMakeLists.txt  Client.cpp  cmake_install.cmake  util.cpp  util.h
demo/chat/: CMakeLists.txt  main.cpp
demo/kvs/: CMakeLists.txt  main.cpp
demo/msg_que/: CMakeLists.txt  main.cpp
demo/send_recv/: CMakeLists.txt  main.cpp
dockerfiles/: demo.dockerfile  non-shm.yml  shm.yml  start-demo.sh
include/: buffer.h  circ_elem.h  circ_elem_array.h  circ_elems_array.h  circ_queue.h  def.h  elem_circ.h  elem_def.h  elem_link.h  export.h  ipc.h  pool_alloc.h  queue.h  rw_lock.h  shm.h  tls_pointer.h  waiter.h
include/libconcur/: bus.h  circular_queue.h  concurrent.h  data_model.h  def.h  element.h  intrusive_stack.h  queue.h
include/libimp/: byte.h  (+24 more)
src/: CMakeLists.txt  buffer.cpp  channel.cpp  channel.hpp  channel.inc  circ_elem_array.h  circ_queue.cpp  circ_queue.h  concept.h  id_pool.h  id_pool.hpp  id_pool.inc  ipc.cpp  log.h  mutex.cpp  pimpl.h  policy.h  pool_alloc.cpp  prod_cons.h  queue.h  route.cpp  route.hpp  route.inc  semaphore.cpp  shm.cpp  thread_local_ptr.h  tls_pointer.cpp  utility.h  waiter.cpp  waiter_template.inc  xmake.lua
src/circ/: elem_array.h  elem_chan.h  elem_def.h
src/libimp/: CMakeLists.txt  codecvt.cpp  error.cpp  fmt.cpp  log.cpp  nameof.cpp  result.cpp  system.cpp  xmake.lua
src/libimp/platform/gnuc/: demangle.h
src/libimp/platform/posix/: codecvt.h  system.h
src/libimp/platform/win/: codecvt.h  demangle.h  system.h
src/libipc/: CMakeLists.txt  buffer.cpp  concurrent.h  event.cpp  ipc.cpp  mmap.cpp  mutex.cpp  policy.h  pool_alloc.cpp  prod_cons.h  queue.h  result.cpp  shm.cpp  spin_lock.cpp  waiter.cpp  waiter.h  waiter_helper.h  waiter_template.inc  xmake.lua
src/libipc/circ/: elem_array.h  elem_def.h
src/libipc/imp/: codecvt.cpp  fmt.cpp  nameof.cpp  system.cpp
src/libipc/mem/: allocator.cpp  bytes_allocator.cpp  central_cache_allocator.cpp  monotonic_buffer_resource.cpp  new.cpp  new_delete_resource.cpp  polymorphic_allocator.cpp  resource.h  verify_args.h
src/libipc/memory/: alloc.h  allocator_wrapper.h  resource.h  wrapper.h
src/libipc/platform/: condition_linux.h  condition_win.h  detail.h  get_sa.h  mutex_linux.h  mutex_win.h  platform.c  platform.cpp  semaphore_linux.h  semaphore_win.h  shm_linux.cpp  shm_win.cpp  tls_detail_win.h  tls_pointer_linux.h  tls_pointer_win.cpp  tls_pointer_win.h  to_tchar.h  waiter_linux.h  waiter_win.h  waiter_wrapper.h
src/libipc/platform/gnuc/: demangle.h
src/libipc/platform/linux/: condition.h  get_wait_time.h  mutex.h  shm_linux.cpp  sync_obj_impl.h
src/libipc/platform/linux/a0/: README.md  atomic.h  clock.h  empty.h  err.c  err.h  err_macro.h  ftx.h  inline.h  mtx.c  mtx.h  strconv.c  strconv.h  thread_local.h  tid.c  tid.h  time.c  time.h  unused.h
src/libipc/platform/posix/: condition.h  def.h  get_error.h  get_wait_time.h  mmap.h  mutex.h  semaphore_impl.h  shm_impl.h  shm_posix.cpp  system.h
src/libipc/platform/win/: api.h  close_handle.h  codecvt.h  comfortable_prefix.h  condition.h  demangle.h  event_impl.h  get_sa.h  mmap.h  mmap_impl.h  mutex.h  mutex_impl.h  process_impl.h  semaphore.h  shm_impl.h  shm_win.cpp  system.h  to_tchar.h
src/libipc/sync/: condition.cpp  mutex.cpp  semaphore.cpp  waiter.cpp
src/libipc/utility/: concept.h  construct.h  countof.h  enum_cast.h  generic.h  horrible_cast.h  id_pool.h  log.h  pimpl.h  scope_guard.h  utility.h
src/libpmr/: CMakeLists.txt  allocator.cpp  block_pool.cpp  memory_resource.cpp  monotonic_buffer_resource.cpp  new.cpp  synchronized_pool_resource.cpp  verify_args.h  xmake.lua
src/memory/: alloc.h  alloc.hpp  allocator_wrapper.h  detail.h  resource.h  resource.hpp  wrapper.h  wrapper.hpp
src/platform/: detail.h  shm_linux.cpp  shm_win.cpp  thread_local_ptr_win.cpp  tls_pointer_linux.cpp  tls_pointer_linux.h  tls_pointer_win.cpp  tls_pointer_win.h  to_tchar.h  waiter.h  waiter_linux.h  waiter_win.h  waiter_wrapper.h
test/: CMakeLists.txt  main.cpp  stopwatch.hpp  test.h  test_buffer.cpp  test_circ.cpp  test_circ_elem_array.cpp  test_circ_queue.cpp  test_concur_concurrent.cpp  test_condition.cpp  test_detect_plat.cpp  test_imp_codecvt.cpp  test_imp_log.cpp  test_imp_span.cpp  test_imp_system.cpp  test_imp_utility.cpp  test_ipc.cpp  test_ipc_channel.cpp  test_ipc_concurrent.cpp  test_ipc_mmap.cpp  test_ipc_shm.cpp  test_locks.cpp  test_mem.cpp  test_mutex.cpp  test_platform.cpp  test_pthread.cpp  test_queue.cpp  test_result.cpp  test_semaphore.cpp  test_shm.cpp  test_src_utility.cpp  test_sync.cpp  test_thread_utility.cpp  test_util.h  test_utility.cpp  test_waiter.cpp  thread_pool.h  xmake.lua
test/archive/: test.h  test_ipc.cpp  test_mem.cpp  test_platform.cpp  test_queue.cpp  test_sync.cpp  test_waiter.cpp
test/capo/: random.hpp  spin_lock.hpp
test/concur/: test_concur_bus.cpp  test_concur_circular_queue.cpp  test_concur_concurrent.cpp  test_concur_intrusive_stack.cpp  test_concur_queue.cpp  test_concur_stack.cpp
test/imp/: test_imp_byte.cpp  test_imp_codecvt.cpp  test_imp_detect_plat.cpp  test_imp_error.cpp  test_imp_expected.cpp  test_imp_fmt.cpp  test_imp_generic.cpp  test_imp_log.cpp  test_imp_result.cpp  test_imp_span.cpp  test_imp_system.cpp  test_imp_uninitialized.cpp  test_imp_utility.cpp
test/ipc/: test_ipc_event.cpp  test_ipc_shm.cpp
test/mem/: test_mem_allocator.cpp  test_mem_block_pool.cpp  test_mem_bytes_allocator.cpp  test_mem_central_cache_allocator.cpp  test_mem_central_cache_pool.cpp  test_mem_memory_resource.cpp  test_mem_new.cpp
test/pmr/: test_pmr_allocator.cpp  test_pmr_block_pool.cpp  test_pmr_memory_resource.cpp  test_pmr_monotonic_buffer_resource.cpp  test_pmr_new.cpp  test_pmr_small_storage.cpp
test/profiler/: README.md  profiler.cpp  profiler.h  rdtsc.h
(+61 files in other folders)
